--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,20 @@
 spring.application.name=api_zoologico
 
 # BD
-spring.datasource.url=jdbc:postgresql://localhost:5432/zoologico
-spring.datasource.username=postgres
-spring.datasource.password=1234leiderY
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
 
 # Hibernate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=${JPA_HIBERNATE_DDL_AUTO}
 spring.jpa.show-sql=true
 
 # Formatear la salida de las consultas SQL
 spring.jpa.properties.hibernate.format_sql=true
 
 # clave secreta de token
-SECRET_KEY=6dsskofiuwslwkuekjfew65856269dv56wd865wd845c55s
+SECRET_KEY=${SECRET_KEY}
+
+#Ruta con la version de la api
+server.servlet.context-path=/api/v1
